# Utils

./: .clang-format  .gitignore  ;  CMakeLists.txt  Makefile  README.md  bit.py  common.mk  test.asm  test.s  test2.s  update-format.sh  validate-format.sh
.github/workflows/: utils-lint.yml  utils-test.yml
.obj/data_structs/: int_set_c.d  irbtree_c.d  min_heap_c.d  rbtree_c.d  rtree_c.d  union_find_c.d
.obj/math/: random_c.d
.obj/timing/: timing_c.d
cmake/: CMakeAVXCheck.cmake
cmake/arch_test/: test_avx.s  test_empty.c
include/algorithms/: const_ctrl.h  sort.h
include/data_structs/: .min_heap.h.swp  fht_ht.h  flat_hash_map.h  int_set.h  irbtree.h  min_heap.h  rbtree.h  rtree.h  union_find.h  vector.h
include/fun/: print_colors.h
include/math/: hashes.h  prime_factor_list.h  random.h
include/string/: string.h
include/timing/: timing.h
include/util/: util.h
include/utils/: utils.h
include/utils/algorithms/: const_ctrl.h  rect_packing.h  sort.h
include/utils/data_structs/: flat_hash_map.h  int_set.h  irbtree.h  min_heap.h  rbtree.h  rbtree_defaults.h  rtree.h  union_find.h  vector.h
include/utils/fun/: print_colors.h
include/utils/math/: hashes.h  mat2.h  mat3.h  prime_factor_list.h  random.h  vec2.h  vec3.h  vec4.h
include/utils/math/group/: cyclic.h  dihedral.h  direct_product.h  group.h  trivial.h
include/utils/memory/: arena.h
include/utils/os/: dircntl.h
include/utils/string/: string.h
include/utils/timing/: timing.h
src/: util.c  utils.c
src/algorithms/: rect_packing.c
src/arch_test/: test_avx.s  test_empty.c
src/data_structs/: .min_heap.c.swp  int_set.c  irbtree.c  min_heap.c  rbtree.c  rtree.c  rtree.cc  union_find.c  vector.c
src/math/: prime_factor_list.c  prime_factor_list.cc  random.c
src/os/: dircntl.c
src/string/: string.c  to_upper_lower.s  to_upper_lower_avx.s
src/timing/: timing.c
src/util/: util.c
test/: CMakeLists.txt  Makefile  hash_table_test.cpp  int_set_test.c  irbperf.c  irbtest.c  min_heap_test.c  prime_factor_list_test_c.c  prime_factor_list_test_cc.cc  print_test.cc  print_test.cpp  rbtest_c.c  rbtest_cc.cc  rtree_test.c  run_tests.sh  sort_test.cpp  sort_test_c.c  sort_test_cc.cc  test_arena.cc  test_dircntl.c  test_group.cc  test_int_set.c  test_irbtree.c  test_main.cc  test_mat.c  test_min_heap.c  test_prime_factor_list.c  test_prime_factor_list.cc  test_rbtree.c  test_rbtree.cc  test_rect_packing.c  test_rtree.c  test_rtree.cc  test_sort.c  test_sort.cc  test_test.cc  test_test.cpp  test_to_upper_lower.c  test_union_find.c  test_util_functions.c  (+8 more)
test/.obj/: sort_test_c_c.d
